description = """The Theta Discord Bot"""

allprojects {
    ext {
        botDependencies = [
                JDA          : 'net.dv8tion:JDA:3.3.0_263',
                Guava        : 'com.google.guava:guava:21.0',
                Math         : 'com.github.meowingtwurtle:mathParser:1.0.1',
                JGit         : 'org.eclipse.jgit:org.eclipse.jgit:4.7.0.201704051617-r',
                NoOpLogger   : 'org.slf4j:slf4j-nop:1.7.2',
                ApacheCommons: 'org.apache.commons:commons-lang3:3.6',
                ThetaAPI     : project(':theta-api'),
                ThetaBase    : project(':theta-base'),
                ThetaCommands: project(':theta-commands'),
                ThetaRunner  : project(':theta-runner')
        ]
    }

    apply plugin: 'java'

    group = 'com.srgood'
    version = '2.3.7'
    sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_9

    repositories {
        mavenCentral()
        jcenter()
    }
}
